# rust-perf-benchmark

./: .gitignore  Cargo.toml  README.md
number-benchmark/: Cargo.toml
number-benchmark/benches/: rust_decimal_criterion.rs
number-benchmark/src/: fixed_dec.rs  fixed_dec_lib.rs  lib.rs
