[workspace]

members = [
	"number-benchmark"
]

[workspace.package]
rust-version = "1.70.0"
version = "0.1.0"
edition = "2021"
authors = ["Alex Yu <alexcwyu@gmail.com>"]
description = "rust benchmark"


[workspace.dependencies]
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
fixed = "1.23.1"
fixed-macro = "1.2.0"
bigdecimal = "0.4.0"
decimal = "2.1.0"
fraction = "0.13.1"
fpdec = "0.8.1"
fast-float = "0.2.0"
rand = "0.8.5"
pyo3 = { version = "0.19.1", features = [ "rust_decimal", "chrono", "serde" ] }
pyo3-macros = "0.19.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"

# dev-dependencies
criterion = "0.5.1"
iai = "0.1.1"
rstest = "0.18.1"
rstest_macros = "0.18.1"
test-case = "3.1.0"
test-case-macros = "3.1.0"
tempfile = "3.6.0"
critcmp = "0.1.7"
float-cmp = "0.9.0"