[package]
name = "number-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true



[dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
fixed.workspace = true
fixed-macro.workspace = true
bigdecimal.workspace = true
decimal.workspace = true
fraction.workspace = true
fpdec.workspace = true
fast-float.workspace = true
rand.workspace = true
#pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
critcmp.workspace = true
float-cmp.workspace = true
rstest.workspace = true
rstest_macros.workspace = true

[lib]
name = "number_benchmark"
path = "src/lib.rs"

[[bench]]
name = "rust_decimal_criterion"
harness = false

#
#[[bench]]
#name = "rust_decimal_libtest"
#harness = false
